@@ -145,6 +145,7 @@ namespace InfoBoxFactory
     ATC_RADIAL,
 
     TASK_SPEED_HOUR,
+    WP_NOMINAL_DIST, /* The nominal distance to the currently selected waypoint. For AAT tasks, this is the distance to the origin of the AAT sector */
 
     e_NUM_TYPES /* Last item */
   };
